<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_search_filters">SearchFiltersActivity</string>
    <string name="search_filter_title">Advanced search options</string>
    <string name="size_label">Image Size</string>
    <string name="color_label">Color Filter</string>
    <string name="type_label">Image Type</string>
    <string name="site_label">Site Filter</string>

    <string-array name="sizes">
        <item></item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <string-array name="colors">
        <item></item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="type">
        <item></item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>


</resources>
